Changed index file
Modification done

--- a/source/Ragas.html
+++ b/source/Ragas.html
@@ -12,7 +12,7 @@
     <div class="nav">
         <img src="../images/logo1.jpg" alt="">
         <ul>
-            <li > <a href="../music.html">Home</a></li>
+            <li > <a href="../index.html">Home</a></li>
             <li><a href="../source/sign.html">History</a></li>
             <li><a href="../source/Ragas.html" class="active">Ragas</a></li>
             <li><a href="../source/about us.html">Learn Ragas</a></li>
