--- a/source/contact.html
+++ b/source/contact.html
@@ -11,7 +11,7 @@
     <div class="nav">
         <img src="../images/logo1.jpg" alt="">
         <ul>
-            <li > <a href="../music.html">Home</a></li>
+            <li > <a href="../index.html">Home</a></li>
             <li ><a href="./sign.html" >History</a></li>
             <li><a href="./Ragas.html">Ragas</a></li>
             <li><a href="./about us.html" >Learn Ragas</a></li>
