--- a/source/login.html
+++ b/source/login.html
@@ -105,7 +105,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="login-btn" onclick="func()"><a href="../music.html">Login</a></button>
+            <button type="submit" class="login-btn" onclick="func()"><a href="../index.html">Login</a></button>
             <div class="forgot-password">
                 <a href="#" onclick="forgot()">Forgot your password?</a>
             </div>
