--- a/source/sign.html
+++ b/source/sign.html
@@ -12,7 +12,7 @@
     <div class="nav">
         <img src="../images/logo1.jpg" alt="">
         <ul>
-            <li > <a href="../music.html">Home</a></li>
+            <li > <a href="../index.html">Home</a></li>
             <li ><a href="./sign.html" class="active">History</a></li>
             <li><a href="./Ragas.html">Ragas</a></li>
             <li><a href="./about us.html">Learn Ragas</a></li>
